--- a/MemoriaFlora/ViewControllers/Flowers/FlowerItemCollectionViewCell.xib
+++ b/MemoriaFlora/ViewControllers/Flowers/FlowerItemCollectionViewCell.xib
@@ -39,7 +39,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="er5-Ne-GwT">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="er5-Ne-GwT">
                                 <rect key="frame" x="120" y="8" width="25" height="25"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IeD-DR-vYA">
